# Distributed-SQL-Query-Engine

./: .gitignore  Cargo.toml  DOCUMENTATION_SUMMARY.md  LARGE_SCALE_DATA_PROCESSING_SUMMARY.md  LICENSE  LINKEDIN_POST.txt  LINKEDIN_READY.md  LOG_MAINTENANCE_GUIDE.md  PROJECT_LOG.md  PROJECT_LOG.txt  README.md  USAGE.md  pom.xml  project_notes.txt  start_system.sh  stop_system.sh  update_logs.sh
client/: Cargo.toml  pom.xml
client/src/: main.rs
client/src/main/java/com/distributed/sql/client/: SQLClient.java
common/: Cargo.toml  build.rs  pom.xml
common/src/: lib.rs
common/src/main/java/com/distributed/sql/common/models/: Condition.java  DataType.java  Join.java  JoinType.java  NodeType.java  Operator.java  PlanNode.java  Query.java  QueryType.java  ResultSet.java  Row.java  ShardInfo.java  ShardType.java
common/src/main/java/com/distributed/sql/common/utils/: AppLogger.java  Tracer.java
common/src/main/proto/: query.proto
common/src/models/: condition.rs  join.rs  mod.rs  plan_node.rs  query.rs  result_set.rs  row.rs  shard_distribution.rs  shard_info.rs  shard_key.rs
common/src/proto/: mod.rs
common/src/test/java/com/distributed/sql/common/models/: ConditionTest.java  QueryTest.java  ResultSetTest.java
common/src/utils/: logger.rs  mod.rs  tracer.rs
coordinator/: Cargo.toml  pom.xml
coordinator/src/: coordinator_service.rs  main.rs  query_planner.rs  shard_manager.rs
coordinator/src/main/java/com/distributed/sql/coordinator/: CoordinatorMain.java  CoordinatorServiceImpl.java  QueryPlan.java  QueryPlanner.java  SQLParser.java  ShardManager.java  WorkerClient.java
data/: orders.csv  products.csv  users.csv
docs/: README.md  architecture.md  configuration.md  interview-guide.md  usage.md
docs/assets/: pdf-concise-style.css  pdf-pitch-style.css  pdf-style.css
docs/portfolio/: PROJECT_PORTFOLIO.html  PROJECT_PORTFOLIO.md  PROJECT_PORTFOLIO_CONCISE.html  PROJECT_PORTFOLIO_CONCISE.md  PROJECT_PORTFOLIO_PITCH.html  PROJECT_PORTFOLIO_PITCH.md
docs/scripts/: convert_to_pdf.sh  generate_professional_pdf.sh  html_to_pdf.py
examples/: basic_queries.rs  performance_test.rs  sharding_demo.rs
proto/: query.proto
scripts/: create_schema.sql  init_databases.sql  load_sample_data.sql  start_system.sh  stop_system.sh  test_query.sh  test_system.sh
src/main/java/com/distributed/sql/client/: SQLClient.java
src/main/java/com/distributed/sql/common/models/: Condition.java  Join.java  PlanNode.java  Query.java  ResultSet.java  Row.java
src/main/java/com/distributed/sql/coordinator/: CoordinatorMain.java  CoordinatorServer.java  QueryExecutor.java  QueryPlanner.java  SQLParser.java  WorkerClient.java
src/main/java/com/distributed/sql/utils/: Logger.java  Tracer.java
src/main/java/com/distributed/sql/worker/: ExecutionEngine.java  FaultToleranceManager.java  WorkerMain.java  WorkerServer.java
src/main/proto/: query.proto
visualizer/: Cargo.toml  README.md  demo.md  start_visualizer.sh
visualizer-backend/: pom.xml
visualizer-backend/src/main/java/com/distributed/sql/visualizer/: CoordinatorClient.java  VisualizerApplication.java  VisualizerController.java  WebSocketConfig.java  WebSocketService.java
visualizer-backend/src/main/resources/: application.properties
visualizer-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
visualizer-frontend/src/: App.tsx  index.css
visualizer-frontend/src/components/: ArchitectureView.tsx  DemoView.tsx  PerformanceView.tsx  QueryFlowView.tsx
visualizer/src/: main.rs  system_client.rs  visualizer.rs
visualizer/static/: index.html
visualizer/static/css/: style.css
visualizer/static/js/: app.js
worker/: Cargo.toml  pom.xml
worker/src/: data_store.rs  main.rs  query_executor.rs  worker_service.rs
worker/src/main/java/com/distributed/sql/worker/: DataStore.java  QueryExecutor.java  WorkerMain.java  WorkerServiceImpl.java
