[workspace]
members = [
    "visualizer",
    "common",
    "coordinator", 
    "worker",
    "client"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQL Parsing
nom = "7.1"

# Data processing
csv = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
tokio-test = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
futures = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A distributed SQL query engine built in Rust"
repository = "https://github.com/yourusername/distributed-sql-engine-rust"
keywords = ["sql", "distributed", "query-engine", "rust", "grpc"]
categories = ["database", "web-programming::http-server"]
