[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI client for the distributed SQL engine"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true

# Local dependencies
common = { path = "../common" }

# Additional dependencies
async-trait = "0.1"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
