[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common data models and utilities for the distributed SQL engine"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true

# Additional dependencies
async-trait = "0.1"
bytes = "1.5"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.10"
