[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Web-based visualizer for Distributed SQL Query Engine"

[dependencies]
# Web server
warp = "0.3"
tokio = { version = "1.35", features = ["full"] }

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = "0.3"

# HTTP client for static files
mime_guess = "2.0"

# WebSocket support
tokio-tungstenite = "0.21"
tokio-stream = "0.1"

# Common workspace dependencies
common = { path = "../common" }

[[bin]]
name = "visualizer"
path = "src/main.rs"
